fix padding on mobile

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -3,6 +3,5 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 6rem;
-    /*min-height: 100vh;*/
+    padding: 1rem;
 }
